tests/NormalTests/paczka2/big_fuzzy/80432670.err
Error in line 6: HP6h4qI5ueU S597 134,54
Error in line 4: HP6h4qI5ueU S597 63,7
Error in line 15: wjgKz S737 101,5
Error in line 29: S127 S597 91,41
Error in line 35: WUL7fwF S597 66,5
Error in line 36: WUL7fwF S737 8,9
Error in line 43: wjgKz S737 32,21
Error in line 54: wjgKz S737 133,9
Error in line 64: wjgKz A409 3,0
Error in line 81: WUL7fwF S127 77,52
Error in line 83: wjgKz S597 20,2
Error in line 70: WUL7fwF S597 34,8
Error in line 103: HP6h4qI5ueU A409 18,3
Error in line 104: HP6h4qI5ueU S737 33,9
Error in line 119: HP6h4qI5ueU S737 78,9
Error in line 93: WUL7fwF S127 55,6
Error in line 133: WUL7fwF S597 85,1
Error in line 124: nuKIbn8 A409 267,8
Error in line 142: S127 S597 1,6
Error in line 147: wjgKz S127 15,3
Error in line 157: S127 S737 99,25
Error in line 151: wjgKz S737 91,1
Error in line 152: HP6h4qI5ueU S127 8,9
Error in line 176: nuKIbn8 S597 58,3
Error in line 173: HP6h4qI5ueU S737 80,1
Error in line 185: WUL7fwF A409 243,0
Error in line 189: WUL7fwF S127 87,0
Error in line 190: wjgKz S737 77,4
Error in line 145: S127 S737 87,3
Error in line 199: S127 A409 93,6
Error in line 201: HP6h4qI5ueU A409 37,2
Error in line 233: S127 S127 95,1
Error in line 237: wpku S737 67,6
Error in line 235: S127 A409 60,9
Error in line 240: S127 S597 75,2
Error in line 241: S127 S127 52,9
